[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notion-mcp-fast"
version = "0.1.0"
description = "Fast MCP server for Notion - reads from Notion.app's local SQLite cache on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "everything-chalna" }
]
keywords = ["notion", "mcp", "cache", "sqlite", "macos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/everything-chalna/notion-mcp-fast"
Repository = "https://github.com/everything-chalna/notion-mcp-fast"
Issues = "https://github.com/everything-chalna/notion-mcp-fast/issues"

[project.scripts]
notion-mcp-fast = "notion_mcp_fast:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
